<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Umotic</string>
    <string name="action_menu">Menu</string>
    <string name="generalSettings">General</string>
    <string name="realtime">Real time</string>
    <string name="notificationSettings">Notifications</string>
    <string name="hello">Hello</string>
    <string name="title_sign_out">Really exit?</string>
    <string name="message_sign_out">Are you sure you want to log out your account?</string>
    <string name="title_activity_side_menu">SideMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_car">Select your car</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update Your Personal Informations</string>
    <string name="update_commit">Apply</string>
    <string name="update">Edit</string>
    <string name="createCarBtn">Create Car</string>
    <string name="carPlate">License Plate</string>
    <string name="carNameCustom">Customized Name</string>
    <string name="selectedCar">"Selected car: "</string>
    <string name="insertInfo">Fill in the following fields</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_app">Do you want close the app?</string>
    <string name="internet_connection">No Internet Connection</string>
    <string name="enter_mail">Enter your email</string>
    <string name="send_mail">Send email</string>
    <string name="sending_mail">Sending mail&#8211;</string>
    <string name="sent_mail">Message sent</string>
    <string name="object_mail">Reset Password UMotic App</string>
    <string name="data_deleted">Data deleted!</string>
    <string name="data_deleted_failed">Data not deleted!</string>
    <string name="data_delete">Delete data car</string>
    <string name="delete_Car">Are you sure to permanently remove this data car?</string>
    <string-array name="text_mail">
        <item>Hi </item>
        <item>the password of your account:</item>
        <item>, is:\t</item>
        <item>Please return into the app and log in.\nKind regards,\nUMotic corporation.</item>
    </string-array>
    <string name="carsActivityTitle">Cars</string>
    <string name="profileActivityTitle">Profile</string>
    <string name="settingsActivityTitle">Settings</string>
    <string name="newCarActivityTitle">Add New Car</string>
    <string name="homeActivityTitle">Home</string>
    <string name="realTime">Real Time Analysis</string>
    <string name="tire_repairer">Tire repairer</string>
    <string name="auto_repair">Authorized car service station</string>
    <string name="mechanic">Mechanic</string>
    <string name="fuel_dispenser">Fuel dispenser</string>
    <string name="username">Username</string>
    <string name="usernameOrEmail">Username Or Email</string>
    <string name="email">Email</string>
    <string name="CF">Fiscal Code</string>
    <string name="password">Password</string>
    <string name="re_password">Re-enter Password</string>
    <string name="birthday">Birthday Date</string>
    <string name="login">Sign In</string>
    <string name="register">Sign Up</string>
    <string name="logout">Log out</string>
    <string name="notRegisterYet">Not Register Yet?</string>
    <string name="forgotPassword"><u>Forgot Your Password?</u></string>
    <string name="createAccount">No account yet? <u>Create one</u></string>
    <string name="remindMe">Remember my username</string>
    <string name="contactUs">Contact Us</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="privacyPolicyContent">Effective date: December 18, 2018

Umotic ("us", "we", or "our") operates the Umotic Car mobile application (the "Service").

This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data. Our Privacy Policy for Umotic is based on the Free Privacy Policy Template Website.

We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.</string>
    <string name="infoCollection">Information Collection And Use</string>
    <string name="infoCollectionContent">We collect several different types of information for various purposes to provide and improve our Service to you.</string>
    <string name="typesOfData">Types of Data Collected</string>
    <string name="personalData">Personal Data</string>
    <string name="personalDataContent">While using our Service, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you ("Personal Data"). Personally identifiable information may include, but is not limited to:</string>
    <string name="personalDataEmail">- Email address</string>
    <string name="personalDataNames">- First name and last name</string>
    <string name="personalDataCookies">- Cookies and Usage Data</string>
    <string name="usageData">Usage Data</string>
    <string name="usageDataContent">When you access the Service by or through a mobile device, we may collect certain information automatically, including, but not limited to, the type of mobile device you use, your mobile device unique ID, the IP address of your mobile device, your mobile operating system, the type of mobile Internet browser you use, unique device identifiers and other diagnostic data ("Usage Data").</string>
    <string name="trackingData">Tracking and Cookies Data</string>
    <string name="trackingDataContent">We use cookies and similar tracking technologies to track the activity on our Service and hold certain information.</string>
    <string name="trackingDataContent1">Cookies are files with small amount of data which may include an anonymous unique identifier. Cookies are sent to your browser from a website and stored on your device. Tracking technologies also used are beacons, tags, and scripts to collect and track information and to improve and analyze our Service.</string>
    <string name="trackingDataContent2">You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of our Service.</string>
    <string name="trackingDataContent3">Examples of Cookies we use:</string>
    <string name="trackingDataSession">- Session Cookies. We use Session Cookies to operate our Service.</string>
    <string name="trackingDataPreference">- Preference Cookies. We use Preference Cookies to remember your preferences and various settings.</string>
    <string name="trackingDataSecurity">- Security Cookies. We use Security Cookies for security purposes.</string>
    <string name="useOfData">Use of Data</string>
    <string name="useOfData1">- To provide and maintain the Service</string>
    <string name="useOfData2">- To notify you about changes to our Service</string>
    <string name="useOfData3">- To allow you to participate in interactive features of our Service when you choose to do so</string>
    <string name="useOfData4">- To provide customer care and support</string>
    <string name="useOfData5">- To provide analysis or valuable information so that we can improve the Service</string>
    <string name="useOfData6">- To monitor the usage of the Service</string>
    <string name="useOfData7">- To detect, prevent and address technical issues</string>
    <string name="trasferData">Transfer Of Data</string>
    <string name="trasferDataContent">Your information, including Personal Data, may be transferred to — and maintained on — computers located outside of your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from your jurisdiction.

If you are located outside Italy and choose to provide information to us, please note that we transfer the data, including Personal Data, to Italy and process it there.

Your consent to this Privacy Policy followed by your submission of such information represents your agreement to that transfer.

Umotic will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.</string>
    <string name="disclosureData">Disclosure Of Data</string>
    <string name="disclosureDataContent">Legal Requirements</string>
    <string name="disclosureDataContent1">Umotic may disclose your Personal Data in the good faith belief that such action is necessary to:</string>
    <string name="disclosureData1">- To comply with a legal obligation</string>
    <string name="disclosureData2">- To protect and defend the rights or property of Umotic</string>
    <string name="disclosureData3">- To prevent or investigate possible wrongdoing in connection with the Service</string>
    <string name="disclosureData4">- To protect the personal safety of users of the Service or the public</string>
    <string name="disclosureData5">- To protect against legal liability</string>
    <string name="securityData">Security Of Data</string>
    <string name="securityDataContent">The security of your data is important to us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Data, we cannot guarantee its absolute security.</string>
    <string name="serviceProviders">Service Providers</string>
    <string name="serviceProvidersContent">We may employ third party companies and individuals to facilitate our Service ("Service Providers"), to provide the Service on our behalf, to perform Service-related services or to assist us in analyzing how our Service is used.

These third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.</string>
    <string name="links">Links To Other Sites</string>
    <string name="linksContent">Our Service may contain links to other sites that are not operated by us. If you click on a third party link, you will be directed to that third party site. We strongly advise you to review the Privacy Policy of every site you visit. We have no control over and assume no responsibility for the content, privacy policies or practices of any third party sites or services.</string>
    <string name="privacyChanges">Changes To This Privacy Policy</string>
    <string name="privacyChangesContent">We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.

We will let you know via email and/or a prominent notice on our Service, prior to the change becoming effective and update the "effective date" at the top of this Privacy Policy.

You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</string>
    <string name="contactUsContent">If you have any questions about this Privacy Policy, please contact us:</string>
    <string name="contactUsEmail">- By email: umoticdevelopers@gmail.com</string>
</resources>