<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"></item>

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_cars"
            android:icon="@drawable/ic_cars"
            android:title="@string/select_car"></item>
    </group>


    <group android:checkableBehavior="single"
        android:id="@+id/group3">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settingsActivityTitle"></item>

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group4">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"></item>
    </group>




</menu>