<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp"
        android:background="@color/background">

        <ImageView
            android:layout_width="252dp"
            android:layout_height="157dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo"/>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextLabel">

            <EditText
                android:theme="@style/TextLabel"
                android:id="@+id/input_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usernameOrEmail"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true"
            android:theme="@style/TextLabel">

            <EditText

                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remindMe"
            android:buttonTint="@color/black" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/login"
            android:onClick="onLogin"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="23dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/createAccount"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="22dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:onClick="sendEmail"
            android:textColor="@color/black"
            android:text="@string/forgotPassword"
            android:textSize="16dp" />

    </LinearLayout>
</ScrollView>